Remove deprecated links apis (#1902)
